@@ -4,6 +4,7 @@ meecast (0.6.10) unstable; urgency=low
   * Added icons for foreca.com
   * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch translations
   * Added new iconset Atoms. Thanks Andrew Zhilin
+  * Fixed problem with feels like in source gismeteo.ru
   * Fixed problem with timezone in source gismeto.ru
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200
